fix(styles): update content block spacing to use `:has()` for bottom margin adjustment

--- a/client/src/common/components/ContentBlock/ContentBlock.module.css
+++ b/client/src/common/components/ContentBlock/ContentBlock.module.css
@@ -4,6 +4,6 @@
     box-sizing: border-box;
 }
 
-.content-block + .content-block {
-    margin-top: 24px;
+.content-block:has(+ .content-block) {
+    margin-bottom: 24px;
 }
